compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/visibility/privateConformanceOutsideOwner.qn
pub outsideOwner(route: PublicRouteCarrier) -> i64 {
  return route.extend.privateRouteValue()
}
